# pocketshell

./: .gitignore  .robust-tmux  AGENTS.md  CLAUDE.md  README.md  agents.md  build.gradle.kts  cgroups.toml  debug.keystore  gradle.properties  process.md  settings.gradle.kts
.claude/agents/: implementer.md  oncall-engineer.md  researcher.md  reviewer.md
.claude/skills/connect-device/: SKILL.md
.claude/skills/screenshot-to-issue/: SKILL.md
.github/workflows/: build.yml  emulator-smoke.yml  nightly-extensive.yml  release-emulator-validation.yml  tests.yml
app/: build.gradle.kts  lint.xml
app/src/androidTest/: AndroidManifest.xml
app/src/debug/: AndroidManifest.xml
app/src/main/: AndroidManifest.xml
artifacts/ci-journey/: summary.md
docs/: README.md  agent-awareness.md  architecture.md  audit-2026-07-03.md  black-screen-handoff.md  connection-stability-campaign.md  connection-storm-2026-07-16.md  decisions.md  design-language.md  design-system.md  diagnostics.md  docker-emulator-runbook.md  dogfood-visual-pass.md  handoff-2026-07-15.md  handoff-2026-07-16-evening.md  handoff-2026-07-16.md  handoff-2026-07-17.md  input-methods.md  reconnect-policy.md  release-terminal-gate.md  roadmap.md  server-setup.md  ssh-qr-import.md  testing.md  tmux-socket-recovery.md  ui-audit-issue-56.md  usage-panel.md  ux-rules.md  vision.md  walkthrough-visual-pass.md
docs/mockups/: chords.html  composer.html  conversation.html  dashboard.html  index.html  session.html  styles.css
docs/screenshots/: README.md
gradle/: libs.versions.toml
mockups/tree/: index.html
screenshots/issue-102-tmux/: tmux-opencode-summary.txt
scripts/: agents-pool.sh  android-upgrade-preservation-gate.sh  avd-pool.sh  capture-device-session.sh  capture-dogfood-screenshots.sh  capture-terminal-lab.sh  capture-walkthrough-screenshots.sh  cgroup-run.sh  check-ci-journey-harness-selftest.sh  check-ci-journey-harness.sh  check-component-drift.sh  check-connection-vm-ratchet.sh  check-design-tokens.sh  check-dex-register-pressure.sh  check-executed-test-counts.sh  check-file-size-hygiene.sh  check-nightly-fault-run.sh  check-pypi-version.sh  check-release-emulator-memory-budget.sh  check-stranded-release.sh  check-test-validity-selftest.sh  check-test-validity.sh  check-version-coupling.sh  ci-assemble-with-ndk-retry.sh  ci-journey-aggregate-verdict.sh  ci-journey-budget-functions.sh  ci-journey-class-loop-functions.sh  ci-journey-class-selection-functions.sh  ci-journey-core-terminal-functions.sh  ci-journey-suite.sh  ci-journey-summary-functions.sh  component-drift-baseline.txt  connected-test.sh  connection-vm-ratchet-baseline.txt  design-token-baseline.txt  dev-fast-gate.sh  executed-test-count-floors.txt  file-size-hygiene-baseline.txt  flap-report.py  install-update-apk.sh  (+24 more)
scripts/lib/: agents-pool.sh  app-version.sh  avd-clone.sh  avd-lock.sh  nightly-fault-verdict.sh  nightly-phase-reports.sh  scope-run.sh
shared/core-agents/: build.gradle.kts
shared/core-assistant/: build.gradle.kts
shared/core-connection/: build.gradle.kts
shared/core-portfwd/: build.gradle.kts
shared/core-ssh/: build.gradle.kts
shared/core-storage/: build.gradle.kts
shared/core-terminal/: PATCHES.md  VENDORED.md  build.gradle.kts
shared/core-terminal/src/main/cpp/: CMakeLists.txt  pocketshell_termux_stub.c
shared/core-tmux/: build.gradle.kts
shared/core-usage/: build.gradle.kts
shared/core-voice/: build.gradle.kts
shared/test-support/: build.gradle.kts
shared/ui-kit/: build.gradle.kts
tests/docker/: Dockerfile.agents  Dockerfile.agents-daemon  Dockerfile.agents-old-cli  Dockerfile.bootstrap  Dockerfile.flaky-transcription  Dockerfile.ssh  Dockerfile.tmux  agent-entrypoint.sh  bootstrap-entrypoint.sh  docker-compose.yml  sshd_config  test_key  test_key.pub
tests/docker/agent-bin/: agent-log-explorer  claude  codex  heru  opencode  pocketshell  pocketshell-fake-agent  pocketshell-tui-smoke  quse  systemctl  tmux  tmuxctl  uv
tests/docker/agent-bin-daemon/: tmuxctl
tests/docker/agent-bin-old-cli/: pocketshell
tests/docker/agent-fixtures/: agent-detections.psv  busy-agent-burst.sh  claude-session.jsonl  codex-session.jsonl  heru-usage.json  idle-incremental-claude.sh  opencode-rows.jsonl  (+4 more)
tests/scripts/: app-version-test.sh  avd-lock-sharing-test.sh  avd-lock-test.sh  avd-pool-test.sh  connected-test-serial-ownership-test.sh  long-running-release-gate-retry-test.sh  phone-walkthrough-dispatch-test.sh  pre-release-emulator-readiness-test.sh  pre-release-gate-retry-test.sh  pre-release-version-test.sh  reconnect-app-switch-test.sh  release-gate-retry-test.sh  start-local-avd-test.sh  terminal-workbench-retry-test.sh  update-install-helper-test.sh  walkthrough-visual-retry-test.sh
tools/pocketshell/: .gitignore  README.md  pyproject.toml
tools/pocketshell-cli/: README.md  pyproject.toml
tools/pocketshell/scheduler/: README.md  pocketshell-usage-capture.service  pocketshell-usage-capture.timer
tools/pocketshell/src/pocketshell/: __init__.py  __main__.py  agent_card_push.py  agent_log.py  agents.py  agents_kind.py  cards.py  cgroup_agents.py  cli.py  daemon.py  env.py  github.py  hooks.py  jobs.py  logs.py  profiles.py  prune_attachments.py  push.py  qr_share.py  repos.py  resume.py  sessions.py  tree.py  usage.py  usage_capture.py  usage_reset.py
tools/pocketshell/tests/: test_agent_card_push.py  test_agent_log.py  test_agents.py  test_agents_kind.py  test_cards.py  test_cards_push_notify.py  test_cgroup_agents.py  test_cli.py  test_daemon.py  test_env.py  test_github.py  test_hooks.py  test_jobs.py  test_logs.py  test_profiles.py  test_prune_attachments.py  test_push.py  test_qr_share.py  test_repos.py  test_resume.py  test_sessions.py  test_tree.py  test_usage.py  test_usage_capture.py  test_usage_reset.py  test_watch_ci.py  test_watch_ci_cancelled.py
tools/pocketshell/tests/data/: quse-0.0.11-usage.json  quse-0.0.9-usage.json
tools/qr-share/: README.md  main.py  test_codec.py
ui-audit/2026-05-24/: blockers.txt
usage-audit/2026-05-24/: findings.txt  usage-mockup-spec.html
(+1677 files in other folders)
