[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pocketshell"
# Must equal `versionName` in app/build.gradle.kts on every release tag.
# scripts/check-pypi-version.sh enforces this; .github/workflows/build.yml
# runs that check before publishing to PyPI. See
# tools/pocketshell/README.md ("Release flow") for the bump procedure.
version = "0.4.39"
description = "Unified server-side Python utility for the PocketShell Android client."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Alexey Grigorev" }]
license = { text = "MIT" }
keywords = ["pocketshell", "ssh", "tmux", "agents", "usage"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development",
    "Topic :: System :: Monitoring",
]
# `pocketshell usage` delegates to the `quse` CLI, which is now a PINNED
# hard dependency (issue #1318): quse owns the unified usage schema, so we
# ship a known-good quse WITH pocketshell and invoke that pinned console-
# script (next to `sys.executable`, never PATH — see `pocketshell/usage.py`
# `_resolve_quse_binary`). A host-level quse upgrade must not reach us.
dependencies = [
    "click>=8.2.0",
    # Usage backend + single source of truth for the unified provider schema
    # (issue #1318). Pinned exactly: `pocketshell usage --json` expects quse's
    # provider-keyed `--json` document (per provider: status +
    # short_term/long_term {percent_remaining, reset_at, window} + error) and
    # fails loudly on any schema drift, so the version is frozen, not a range.
    # 0.0.11 (#1564): quse labels each Codex window from its actual
    # `limit_window_seconds` instead of assuming primary==5h / secondary==7d,
    # and omits a window Codex drops (`present: false`) as a null placeholder
    # rather than a phantom "0% / unavailable" ghost row. Codex temporarily
    # removed the 5h window, so its `primary_window` now carries the WEEKLY
    # (604800s) span — the old positional labels mislabeled weekly data as a
    # "5h window" with a 5-day reset and left a "7d" ghost.
    "quse==0.0.11",
    # FCM HTTP v1 push delivery (#690): service-account OAuth2 bearer minting
    # for `pocketshell push` / the `usage --capture` reset-push send. Imported
    # lazily and fail-soft — a host without it (or without a Firebase
    # credential) simply no-ops the send, so the lower bound is advisory.
    "google-auth>=2.0.0",
    # YAML serialization for `pocketshell profiles list` (#718) — the host's
    # human/agent-readable default output format (#714). The Android client
    # consumes the `--json` flag instead; the host-facing default is YAML.
    "pyyaml>=6.0",
    # Session create/resume delegates to the `tmuxctl` binary (see
    # `pocketshell/resume.py`: `tmuxctl create-detached` / `create-or-attach`),
    # so installing pocketshell pulls a tmuxctl that has the server-cgroup fix.
    # >=0.3.3 is required: earlier tmuxctl started the shared tmux server inside
    # the SSH login's `session-*.scope`, so a logout (or a per-session OOM) tore
    # down every session at once; 0.3.3 starts the server in its own
    # login-independent unit under robust.slice (tmuxctl#4). 0.3.0 first shipped
    # the `create-detached` verb this CLI calls.
    "tmuxctl>=0.3.3",
]

[project.scripts]
pocketshell = "pocketshell.cli:main"

[project.urls]
Homepage = "https://github.com/alexeygrigorev/pocketshell"
Issues = "https://github.com/alexeygrigorev/pocketshell/issues"

[dependency-groups]
dev = [
    "pytest>=8.4.0",
    "ruff>=0.15.0",
]

[project.optional-dependencies]
# Mirror of the dev `dependency-groups` so `pip install -e ".[dev]"` and
# `uv pip install -e ".[dev]"` both work for CI and ad-hoc local setups.
# `uv sync --group dev` reads `dependency-groups`; PEP-621 tooling reads
# `optional-dependencies`. Keeping both in lock-step is cheap.
dev = [
    "pytest>=8.4.0",
    "ruff>=0.15.0",
]
# Optional extra for `pocketshell qr-share`. The `qrcode[pil]` chain is
# heavy (Pillow) and is only needed for QR rendering, so we keep it out
# of the default install. Without this extra, `pocketshell qr-share`
# exits 127 with a friendly install hint; every other subcommand keeps
# working unchanged. Install with `pip install pocketshell[qr]` or
# `uv tool install pocketshell --with qrcode[pil]`.
qr = [
    "qrcode[pil]>=7.4",
]

[tool.hatch.build.targets.wheel]
packages = ["src/pocketshell"]

[tool.hatch.build.targets.sdist]
exclude = [
    "/.github",
    "/.pytest_cache",
    "/.ruff_cache",
    "/.venv",
    "/dist",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
